Material 3 for jetpack compose支援度太低，改使用 Material 1 jetpack compose

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="golden_500">#DAA500</color>
-    <color name="golden_500_55">#55DAA500</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
+    <color name="green_500">#00753C</color>
+    <color name="green_600">#07573E</color>
+    <color name="green_600_new">#0f5946</color>
+    <color name="green_700">#174a4b</color>
+
+    <color name="golden_500">#DAA500</color>
+    <color name="golden_500_55">#55DAA500</color>
 
     <color name="gray_300">#bebebe</color>
     <color name="gray_700">#555555</color>
