--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,10 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
 
+    <color name="green_500">#FF00753C</color>
+    <color name="green_600">#FF0F5946</color>
+    <color name="green_700">#FF0F5946</color>
+
     <color name="golden_500">#DAA500</color>
     <color name="golden_500_55">#55DAA500</color>
 
